# zwoo

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  docker-compose.local.yml  docker-compose.proxy.yml  docker-compose.yml  docs-nginx.conf  proxy-nginx.conf  zwooc.config.json
backend/: .clang-format  .dockerignore  .gitignore  BuildRun.sh  CMakeLists.txt  DebugDockerfile  Directory.Build.props  Dockerfile  DockerfileDashboard  Help.md  ReleaseDockerfile  ZwooBackend.sln  build.sh  conanfile.txt  docker-compose.debug.yml  docker-compose.yml  info.md  setup.sh
backend/BackendHelper/: BackendHelper.csproj  CryptoHelper.cs  EmailData.cs  StringHelper.cs  UIDGenerator.cs
backend/CodeImporter/: CodeImporter.csproj  Program.cs
backend/GameLogic/: GameLogic.csproj  GameManager.cs  GameMessageDistributer.cs  IPlayer.cs  NotificationAdapter.cs  PlayerPublicId.cs  UserContext.cs  UsernameCollisionManager.cs  WebSocketMessageDistributer.cs  ZwooRoom.cs
backend/GameLogic.Tests/: GameLogic.Tests.csproj  Usings.cs
backend/GameLogic.Tests/Framework/: Extensions.cs  GameScenario.cs  MockPile.cs  MockPlayerCycle.cs
backend/GameLogic.Tests/Helper/: AsyncExecutionQueue.cs
backend/GameLogic/Bots/: Bot.cs  BotConfig.cs  BotManager.cs  BotZRPMessage.cs
backend/GameLogic/Events/: IIncomingEvent.cs  IUserEventEmiiter.cs  IUserEventHandler.cs  IUserEventReceiver.cs  UserContext.cs  UserEventDistributer.cs
backend/GameLogic/Game/: Game.cs  GameMeta.cs  PlayerCycle.cs  PlayerManager.cs
backend/GameLogic/Helper/: AsyncExecutionQueue.cs  Awaitable.cs  WaitLock.cs
backend/GameLogic/Lobby/: LobbyEntry.cs  LobbyManager.cs  LobbyResult.cs  PlayerManager.cs  ZRPPlayerManager.cs
backend/GameLogic/Logging/: Logger.cs  LoggerFactory.cs  VoidLogger.cs
backend/GameLogic/Notifications/: GameMessageDistributer.cs  IdBasedNotificationRouter.cs  LobbyIdProxy.cs  NotificationAdapter.cs  NotificationDistributer.cs  NotificationManager.cs  NotificationTarget.cs  SimpleNotificationDistributer.cs
backend/GameLogic/Properties/: AssemblyInfo.cs
backend/GameLogic/ZRP/: GameEventTranslator.cs  IIncomingZRPMessage.cs  ILocalZRPMessage.cs  IUserEventEmiiter.cs  Models.cs  UserContext.cs  UserEventDistributer.cs  ZRPCode.cs  ZRPDecoder.cs  ZRPEncoder.cs  ZRPMessage.cs  ZRPPlayerManager.cs  ZRPPlayerState.cs  ZRPRole.cs
backend/GameLogicTests/: .gitignore  GameLogicTests.csproj  GameManagerTest.cs
backend/GenerateBETACodes/: conanfile.txt
backend/GenerateBETACodes/include/: CodeGenerator.h
backend/GenerateBETACodes/src/: main.cpp
backend/Mongo.Migration/: DocumentVersionSerializer.cs  LICENSE.txt  Mongo.Migration.csproj
backend/Mongo.Migration/Documents/: DocumentVersion.cs
backend/Mongo.Migration/Services/: DocumentVersionService.cs  MigrationService.cs
backend/Zwoo.Backend/: CookieHelper.cs  Dockerfile  Globals.cs  Program.cs  Version.cs  Zwoo.Backend.csproj  appsettings.Development.json
backend/Zwoo.Backend.LocalServer/: .gitignore  Program.cs  Version.cs  Zwoo.Backend.LocalServer.csproj  appsettings.Development.json  appsettings.json
backend/Zwoo.Backend.LocalServer/Authentication/: AuthenticationEndpoints.cs  AuthenticationExtensions.cs  GuestSession.cs  HttpContextExtensions.cs  Model.cs  SessionValidator.cs
backend/Zwoo.Backend.LocalServer/Services/: ConfigProvider.cs  GameProfileProvider.cs  UserManager.cs
backend/Zwoo.Backend.Shared/: TestExtension.cs  Zwoo.Backend.Shared.csproj
backend/Zwoo.Backend.Shared/Api/: JsonSerializerContext.cs  ZwooApi.cs
backend/Zwoo.Backend.Shared/Authentication/: AuthenticationEndpoints.cs  AuthenticationExtensions.cs  (+4 more)
backend/Zwoo.Dashboard/: .gitignore  App.razor  ClaimsTransformer.cs  Program.cs  Version.cs  Zwoo.Dashboard.csproj  _Imports.razor
backend/Zwoo.Database/: .gitignore  AccountEventService.cs  AuditActor.cs  AuditOptions.cs  AuditTrailService.cs  BetaCodesService.cs  ChangelogsService.cs  ContactRequestService.cs  Database.cs  Errors.cs  GameInfoService.cs  UserLoginResult.cs  UserService.cs  Zwoo.Database.csproj
backend/Zwoo.GameEngine/: DebuggingAdapter.cs  GameManager.cs  IPlayer.cs  Zwoo.GameEngine.csproj  ZwooRoom.cs
backend/Zwoo.GameEngine.Tests/: Usings.cs  Zwoo.GameEngine.Tests.csproj
backend/Zwoo.GameEngine.Wasm/: Constants.cs  GameManager.cs  LocalEvent.cs  LocalGameProfileProvider.cs  LocalNotificationAdapter.cs  Programm.cs  Zwoo.GameEngine.Wasm.csproj
backend/Zwoo.Migrations/: AuditTrail.cs  Database.cs  PlayerScore.cs  User.cs  Zwoo.Migrations.csproj
backend/Zwoo.MongoMigrations/: AuditTrail.cs  Database.cs  PlayerScore.cs  User.cs  Zwoo.MongoMigrations.csproj
backend/Zwoo.TestApi/: .gitignore  Program.cs  Zwoo.TestApi.csproj  appsettings.json
backend/ZwooBackend/: CookieHelper.cs  Dockerfile  EmailData.cs  Globals.cs  Program.cs  ZwooBackend.csproj  log4net.config
backend/ZwooDatabase/: AccountEventService.cs  AuditActor.cs  AuditOptions.cs  AuditTrailService.cs  BetaCodesService.cs  ChangelogsService.cs  ContactRequestService.cs  Database.cs  Errors.cs  GameInfoService.cs  UserLoginResult.cs  UserService.cs  ZwooDatabase.csproj
backend/ZwooDatabaseClasses/: AccountEvent.cs  BetaCode.cs  Changelog.cs  ClassInitializer.cs  ContactRequest.cs  GameInfo.cs  User.cs  ZwooDatabaseClasses.csproj
backend/ZwooDatabaseUpdater/: ChangelogL.cs  ChangelogLegacy.cs  GameInfoLegacy.cs  Program.cs  UserLegacy.cs  ZwooDatabaseUpdater.csproj
backend/ZwooInfoDashBoard/: .gitignore  App.razor  ClaimsTransformer.cs  Dockerfile  Program.cs  ZwooInfoDashBoard.csproj  _Imports.razor  realm-export.json
backend/ZwooWasmAdapter/: GameManager.cs  LocalEvent.cs  LocalGameProfileProvider.cs  LocalNotificationAdapter.cs  NotificationDistributer.cs  Program.cs  Programm.cs  ZwooWasmAdapter.csproj  index.html  main.js
backend/include/: Helper.h  HttpServer.h  SHA512.h  SMTPClass.h  version.h  zwoo.h
backend/scripts/: version.js
backend/src/: Helper.cpp  HttpServer.cpp  SHA512.cpp  main.cpp  zwoo.cpp
backend/util/: build.sh
frontend/src-tauri/: .gitignore  Cargo.toml  TODO.md  tauri.conf.json
(+1140 files in other folders)
