[package]
name = "zwoo"
version = "1.0.0-beta.17"
description = ""
authors = ["IGD 2.0 UG (haftungsbeschränkt)"]
license = ""
repository = "https://github.com/fabiankachlock/zwoo"
default-run = "zwoo"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "path-all",
    "fs-exists",
    "fs-read-file",
    "fs-write-file",
    "global-shortcut-all",
    "shell-open",
    "window-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
