[package]
name = "zwoo"
version = "1.0.0"
description = ""
authors = ["IGD 2.0 UG (haftungsbeschränkt)"]
license = ""
repository = "https://github.com/fabiankachlock/zwoo"
default-run = "zwoo"
rust-version = "1.77"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zwoo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.20", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
open = "5"
tauri-plugin-os = "2.0.0-rc.0"

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
